Add first only image upload

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ export PGHOST=localhost
 export PGDATABASE=xxxxxxxxxxxxxx
 export PGUSERNAME=xxxxxxxxxxxxxx
 export PGPASSWORD=xxxxxxxxxxxxxx
+export CLOUDINARY_CLOUD_NAME=xxxxxxxxxxxxxx
+export CLOUDINARY_API_KEY=xxxxxxxxxxxxxx
+export CLOUDINARY_API_SECRET=xxxxxxxxxxxxxx
