--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,16 @@ jobs:
       CLOUDINARY_API_KEY: cloudinary_image_upload
       CLOUDINARY_API_SECRET: cloudinary_image_upload
     steps:
+      - name: Start preinstalled PostgreSQL on Ubuntu
+        run: |
+          sudo systemctl start postgresql.service
+          pg_isready
+      - name: Create database user
+        run: |
+          sudo -u postgres psql --command="CREATE USER cloudinary_image_upload PASSWORD 'cloudinary_image_upload'" --command="\du"
+      - name: Create database and allow user
+        run: |
+          sudo -u postgres createdb --owner=cloudinary_image_upload cloudinary_image_upload
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
       - name: Use Node.js
@@ -23,6 +33,12 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
+      - name: Install SafeQL if not yet installed (eg. on Windows dev machines)
+        run: grep package.json -e '@ts-safeql/eslint-plugin' || pnpm add @ts-safeql/eslint-plugin libpg-query
+      - name: Run database migrations
+        run: pnpm migrate up
+      - name: Build Next.js app (types needed for TSC and ESLint)
+        run: pnpm build
       - name: Check TypeScript Types
         run: pnpm tsc
       - name: Lint with ESLint
